<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2023 Ricky Alturino
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<resources>
    <string name="app_name">Story App</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="have_account">Have an account? Register</string>
    <string name="dismiss">Dismiss</string>
    <string name="story_list">Story List</string>
    <string name="story_detail">Story Detail</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="without_location">Without Location</string>
    <string name="with_location">With Location</string>
    <string name="all">All</string>
    <string name="earliest">Earliest</string>
    <string name="latest">Latest</string>
    <string name="login_failed">Login Failed %s</string>
    <string name="register_failed">Register Failed: %s</string>
    <string name="posting_story">Posting Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="add_story">Add Story</string>
    <string name="name_ascending">Name Ascending</string>
    <string name="name_descending">Name Descending</string>
    <string name="title_activity_story_map">StoryMapActivity</string>
    <string name="story_map">Story Map</string>
    <string name="map">Map</string>
</resources>