<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ MIT License
  ~
  ~ Copyright (c) 2023 Ricky Alturino
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/baseline_filter_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/filter_all"
                android:title="@string/all" />

            <item
                android:id="@+id/filter_with_location"
                android:title="@string/with_location" />

            <item
                android:id="@+id/filter_without_location"
                android:title="@string/without_location" />
        </menu>
    </item>

    <item
        android:id="@+id/sort"
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/sort_name_ascending"
                android:title="@string/name_ascending" />


            <item
                android:id="@+id/sort_name_descending"
                android:title="@string/name_descending" />

            <item
                android:id="@+id/sort_latest"
                android:title="@string/latest" />

            <item
                android:id="@+id/sort_earliest"
                android:title="@string/earliest" />
        </menu>
    </item>

    <item
        android:id="@+id/story_map"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/story_map"
        app:showAsAction="ifRoom" />

</menu>