<?xml version="1.0" encoding="utf-8"?><!--
  ~ MIT License
  ~
  ~ Copyright (c) 2023 Ricky Alturino
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/fragment_story_list">

    <fragment
        android:id="@+id/fragment_login"
        android:name="com.onirutla.storyapp.auth.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_fragment_login_to_fragment_register"
            app:destination="@id/fragment_register"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_fragment_login_to_fragment_story_list"
            app:destination="@id/fragment_story_list"
            app:popUpTo="@id/fragment_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_register"
        android:name="com.onirutla.storyapp.auth.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_fragment_register_to_fragment_login"
            app:destination="@id/fragment_login"
            app:launchSingleTop="true"
            app:popUpTo="@id/fragment_register"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_story_list"
        android:name="com.onirutla.storyapp.story.ui.list.StoryListFragment"
        android:label="@string/story_list"
        tools:layout="@layout/fragment_story_list">
        <action
            android:id="@+id/action_fragment_story_list_to_fragment_add_story"
            app:destination="@id/fragment_add_story"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_fragment_story_list_to_fragment_login"
            app:destination="@id/fragment_login"
            app:popUpTo="@id/fragment_story_list"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/fragment_add_story"
        android:name="com.onirutla.storyapp.story.ui.add_story.AddStoryFragment"
        android:label="@string/add_story"
        tools:layout="@layout/fragment_add_story" />

</navigation>