<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_story.AddStoryActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/preview_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_launcher_background" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="62dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/gallery_button"
        app:layout_constraintStart_toStartOf="@+id/preview_image"
        app:layout_constraintTop_toBottomOf="@+id/preview_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="@+id/preview_image"
        app:layout_constraintStart_toEndOf="@+id/camera_button"
        app:layout_constraintTop_toBottomOf="@+id/preview_image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description_edit_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/description"
        android:paddingHorizontal="8dp"
        android:paddingTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_button" />

</androidx.constraintlayout.widget.ConstraintLayout>